...
    }

    init {
        CoroutineScope(Dispatchers.Default).launch {
            thisTheNearByEndPoint.receivedMessage.collect { newMessage ->
                if (newMessage != null)
                    log("New Message:$newMessage")
            }
        }
    }


    suspend fun sendMessage(message: Message): Result<Unit> {
...
