...

            }

        }
        clickedDevice?.let { device ->
            DeviceDetails(
                modifier=Modifier.testTag("DeviceDetailsDialogue"),
                onClose = onDetailsDismiss,
                onDisconnectRequest = onDetailsDismiss,
                device = device
            )
        }
    }
...
        }

        IconButton(
            onClick = onDeviceInfoClick,
            modifier = Modifier
                .semantics { contentDescription="Device Info" }
                .testTag("DeviceInfoButton")

        ) {
            Icon(imageVector = Icons.Outlined.Info, contentDescription = null)
        }

    }
...
